--- a/wandb/sdk/launch/deploys/aws-eks/launch-agent.yaml
+++ b/wandb/sdk/launch/deploys/aws-eks/launch-agent.yaml
@@ -16,7 +16,7 @@ spec:
       serviceAccountName: wandb-launch-serviceaccount
       containers:
       - name: launch-agent
-        image: wandb/launch-agent-dev:latest
+        image: wandb/launch-agent-dev:939c8c754b
         resources:
           limits:
             memory: "2Gi"
