Make download_async a thing

--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,7 @@ setenv =
 deps =
     -r{toxinidir}/requirements.txt
     pytest
+    pytest-asyncio
     pytest-cov
     pytest-xdist
     pytest-flask
