--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ psutil>=5.0.0
 sentry-sdk>=1.0.0
 six>=1.13.0
 docker-pycreds>=0.4.0
-protobuf>=3.20.2,!=4.0.*,!=4.21.0*,!=4.21.0
+protobuf>=3.12.0,!=4.0.*,!=4.21.0,<5
 PyYAML
 pathtools # supports vendored version of watchdog 0.9.0
 setproctitle
