chore(sdk): fix flake8 output coloring

--- a/tox.ini
+++ b/tox.ini
@@ -232,7 +232,7 @@ deps=
 
 [testenv:isort-check]
 basepython = python3
-skip_install = truecommit
+skip_install = true
 deps=
     {[isort]deps}
 commands=
