--- a/.github/workflows/conventional-label.yml
+++ b/.github/workflows/conventional-label.yml
@@ -9,5 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: bcoe/conventional-release-labels@v1
-#        with:
-#          type_labels: '{"feat": "feature", "fix": "fix"}'
+        with:
+          ignored_types: "[]"
+          type_labels: '{"feat": "cc-feat", "fix": "cc-fix", "docs": "cc-docs", "style": "cc-style", "refactor": "cc-refactor", "perf": "cc-perf", "test": "cc-test", "build": "cc-build", "ci": "cc-ci", "chore": "cc-chore", "revert": "cc-revert", "security": "cc-security"}'
