--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -213,7 +213,7 @@ jobs:
         type: integer
         default: 3
       python_version_minor:
-        type: integer
+        type: string
         default: 7
       toxenv:
         type: string
@@ -266,7 +266,7 @@ jobs:
         type: integer
         default: 3
       python_version_minor:
-        type: integer
+        type: string
         default: 7
       toxenv:
         type: string
@@ -325,7 +325,7 @@ jobs:
         type: integer
         default: 3
       python_version_minor:
-        type: integer
+        type: string
         default: 9
       toxenv:
         type: string
@@ -392,7 +392,7 @@ jobs:
         type: integer
         default: 3
       python_version_minor:
-        type: integer
+        type: string
         default: 7
       toxenv:
         type: string
